--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <p class="description">
           Hola! Mi nombre es Roman, soy de Puerto General San Martín - Santa Fe.
-          Actualmente estoy cursando mi primer en Desarrollo de Software. Me
+          Actualmente estoy cursando mi primer año en Desarrollo de Software. Me
           gustan mucho los videojuegos tipo souls y tomar fotos :)
         </p>
         <div class="icons">
