--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         </div>
       </div>
       <div class="about">
-        <h1>{<b>Roman Valles</b>_</h1>
+        <h1>{<b>Román Valles</b>_</h1>
         <h2>Frontend <b>developer</b></h2>
 
         <p class="description">
-          Hola! Mi nombre es Roman, soy de Puerto General San Martín - Santa Fe.
+          Hola! Mi nombre es Román, soy de Puerto General San Martín - Santa Fe.
           Actualmente estoy cursando mi primer año en Desarrollo de Software. Me
           gustan mucho los videojuegos tipo souls y tomar fotos :)
         </p>
