--- a/humaya/index.html
+++ b/humaya/index.html
@@ -25,10 +25,10 @@
         <div class="collapse" id="navbarToggleExternalContent">
           <div class="bg-dark p-4">
             <ul>
-              <li><a href="">Home</a></li>
-              <li><a href="">Productos</a></li>
-              <li><a href="">Locales</a></li>
-              <li><a href="">Contacto</a></li>
+              <li><a href="#home">Home</a></li>
+              <li><a href="#productos">Productos</a></li>
+              <li><a href="#contactofooter">Locales</a></li>
+              <li><a href="#contacto">Contacto</a></li>
             </ul>
           </div>
         </div>
@@ -49,11 +49,11 @@
       </div>
       <nav>
         <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">Productos</a></li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#productos">Productos</a></li>
           <li id="logoheader"></li>
-          <li><a href="">Locales</a></li>
-          <li><a href="">Contacto</a></li>
+          <li><a href="#contactofooter">Locales</a></li>
+          <li><a href="#contacto">Contacto</a></li>
         </ul>
       </nav>
     </header>
@@ -166,7 +166,7 @@
             <textarea class="consulta" name="" id=""></textarea>
           </div>
 
-          <button id="btnform"><strong>ENVIAR</strong></button>
+          <button type="button" id="btnform"><strong>ENVIAR</strong></button>
         </form>
       </section>
       <div class="title"><h3>RECETAS</h3></div>
