--- a/index.html
+++ b/index.html
@@ -19,18 +19,8 @@
       <p>C:\Users\RomanV\portfolio</p>
     </header>
     <section>
-      <div class="pfp-terminal">
-        <img class="pfp" src="./images/pfp.png" alt="" />
-        <div class="terminal">
-          <div class="terminal-top">
-            <div class="terminal-window">
-              <img src="./images/terminalicon.svg" alt="" />
-              <p>Símbolo del Sistema</p>
-              <img src="./images/terminalx.svg" alt="" />
-            </div>
-          </div>
-        </div>
-      </div>
+      <img src="./images/pfp.png" alt="" />
+
       <div class="about">
         <h1>{<b>Román Valles</b>_</h1>
         <h2>Frontend <b>developer</b></h2>
