--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="./images/icon.png" type="image/x-icon" />
   </head>
   <body>
     <header>
