--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             
           </div>
           <div class="item">
-            <a target="_blank" target="_blank" href="https://romanvalles01.github.io/proyectos/kitichat/"><p>Kitichat</p>
+            <a target="_blank" target="_blank" href="https://kitichat.firebaseapp.com/"><p>Kitichat</p>
             <img src="./images/proyectos/kitichat.png" alt="" />
           </div></a>
             
